Fixed bug #41159 (mysql_pconnect() hash does not account for connect flags).